fixed spacing in home container made mobile friendly using grid instread of flexbox made the main home page look nice in all screens. (yellow backround)

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -3,13 +3,12 @@
     max-width: 100%;
 }
 .home__container{
-    display: flex;
-    flex-direction: row;
-    min-height: 96vh;
+    display: grid;
+    height: calc(100vh - 50px);
     align-items: center;
-    width: 1000px;
-    flex-wrap: wrap;
+    max-width: 1000px;
     margin: 0 auto;
+    grid-template-columns: 2fr 1fr;
 }
 .home > * {
     padding: 20px;
@@ -17,8 +16,6 @@
 .home__hello-text{
     font-style: normal;
     font-weight: 5000;
-    max-width: 435px;
-    min-height: 258px;
     font-size: 64px;
     line-height: 86px;
     
@@ -28,11 +25,19 @@
     font-weight: 100;
 }
 .home__nova{
-    height: 400px;
-    width: 400;
-    order: 4;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
 }
 .home__break{
     flex-basis: 100%;
     height: 0;
+}
+.home__bottom{
+    background-color: rgb(248, 249, 251);
+}
+@media screen and (max-width: 600px) {
+    .home__container{
+        grid-template-columns: 1fr;
+    }
 }
